Slash in custom property name does not work #78823

Closed
opened 2020-07-11 12:51:18 +02:00 by Ada King · 17 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.48

Blender Version
Broken: version: 2.83.2, branch: master, commit date: 2020-07-09 05:50, hash: 239fbf7d93
Worked: unknown

Short description of error
When I use this symbol: \ in the name of custom property here it makes a problem: I can't see data of the property as you can see on the screen (IK\FK). Also, If the same symbol is in the name of constraint it also cause problem: I can't add driver to the influence of constraint. But there is no such problem in the tutorial. Also I use Bone Layers add-on, but it's also used in tutorial and there is no any problem.

Exact steps for others to reproduce the error
Just add the slash in the name.)

PS: It's not very important to me, I just deleted the \ but I guess it can be useful for you to improve Blender.)
Thank you a lot.

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.48 **Blender Version** Broken: version: 2.83.2, branch: master, commit date: 2020-07-09 05:50, hash: `239fbf7d93` Worked: unknown **Short description of error** When I use this symbol: \ in the name of custom property [here ](https://prnt.sc/tfu6mv) it makes a problem: I can't see data of the property as you can see on the screen (IK\FK). Also, If the same symbol is in the name of constraint it also cause problem: I can't add driver to the influence of constraint. But there is no such problem in the tutorial. Also I use Bone Layers add-on, but it's also used in tutorial and there is no any problem. **Exact steps for others to reproduce the error** Just add the slash in the name.) PS: It's not very important to me, I just deleted the \ but I guess it can be useful for you to improve Blender.) Thank you a lot.
Author

Added subscriber: @tssrkt

Added subscriber: @tssrkt
Author

BTW, about my previous report: https://developer.blender.org/T78567

When I use wireframe mode Blender does not couse any problem. That's why I did not answer. Sorry for it.
It's not a good solution, but it's better than nothing.

BTW, about my previous report: https://developer.blender.org/T78567 When I use wireframe mode Blender does not couse any problem. That's why I did not answer. Sorry for it. It's not a good solution, but it's better than nothing.

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Looks like bug indeed.

Looks like bug indeed.
Jacques Lucke changed title from Slash issue to Slash in custom property name does not work 2020-07-14 16:49:57 +02:00
Member

Added subscribers: @mont29, @JacquesLucke

Added subscribers: @mont29, @JacquesLucke
Member

P1533 seems to solve this partially. However, I think a better solution would be to simply forbid some characters in custom property names (like \ and "). Alternatively, instead of forbidding some characters, we could also have an allow-list instead, but that might break some files.

@mont29, what do you think. Should we forbid those characters? They don't seem to work currently anyway.

[P1533](https://archive.blender.org/developer/P1533.txt) seems to solve this partially. However, I think a better solution would be to simply forbid some characters in custom property names (like `\` and `"`). Alternatively, instead of forbidding some characters, we could also have an allow-list instead, but that might break some files. @mont29, what do you think. Should we forbid those characters? They don't seem to work currently anyway.

@JacquesLucke I would just create a forbidden list of characters yes… \, ', " at least I guess?

@JacquesLucke I would just create a forbidden list of characters yes… `\`, `'`, `"` at least I guess?
Member

Yup, that last seems fine. We can always add more in the future if necessary.

Yup, that last seems fine. We can always add more in the future if necessary.
Author

Yes, and just say: "it's not bug it's feature")))

Yes, and just say: "it's not bug it's feature")))

This issue was referenced by cbae82ba96

This issue was referenced by cbae82ba960a0baaae6437b176a310f078ce07d8
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Hans Goudey self-assigned this 2020-09-22 15:50:14 +02:00

This issue was referenced by ceac8559e1

This issue was referenced by ceac8559e105d4912318715598ed054d4d4ba6e4

This issue was referenced by d1cedf53fa

This issue was referenced by d1cedf53faaf11de74ca7c88da207e16ae01c497

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'

This issue was referenced by ceba6b2c21

This issue was referenced by ceba6b2c2161bda2e56bef7252782e0722579e95

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
7 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#78823
No description provided.